# artifact-infrastructure

./: README.md  flake.nix  pyproject.toml
nix/: shared.nix
pythonedaartifactinfrastructurepyprojectversioning/pythonedaartifactpyprojectversioningdbus/: pyproject_versioning_dbus_signal_emitter.py  pyproject_versioning_dbus_signal_listener.py
